# wake-up

./: .gitignore  README.md
.github/workflows/: build_and_release.yml
server/: .env  Cargo.toml
server/docker/armv7/: Dockerfile
server/migrations/2021-12-11-175026_create_devices/: up.sql
server/src/: api_handler.rs  domain.rs  main.rs  repo.rs  schema.rs
web/: README.md  package-lock.json  package.json  vue.config.js
web/src/: App.vue  main.ts
web/src/components/: Device.vue
web/src/types/: device.model.ts
