[package]
name = "wake-up"
version = "0.1.0"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.10"
wakey = "0.1.2"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_migrations = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = [
    "diesel_postgres_pool",
    "json",
]
