[package]
name = "wake-up"
version = "0.1.5"
authors = ["Juri Berlanda <juriberlanda@hotmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae07" }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
wakey = "0.1.2"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
diesel_migrations = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"
